[gd_scene load_steps=4 format=3 uid="uid://bvxdmi0iut57x"]

[ext_resource type="Script" uid="uid://ct1mdxds31llh" path="res://Scripts/Projectiles/Laser_wall.gd" id="1_16de7"]
[ext_resource type="Texture2D" uid="uid://dgsc5u3yypio1" path="res://Sprites/Projectiles/Laser_wall.png" id="2_7157o"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3kn46"]
size = Vector2(16, 56)

[node name="Laser_wall" type="Node2D" groups=["Projectile"]]
process_mode = 1
z_index = 50
script = ExtResource("1_16de7")
id = 31
speed = Vector2(0, 200)
has_particle = false

[node name="Node2D" type="Node2D" parent="."]
position = Vector2(-75, 0)

[node name="Sprite2D" type="Sprite2D" parent="Node2D"]
position = Vector2(90, 0)
scale = Vector2(4, 4)
texture = ExtResource("2_7157o")

[node name="Area2D" type="Area2D" parent="Node2D"]
position = Vector2(90, 0)
collision_layer = 4
collision_mask = 70

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/Area2D"]
shape = SubResource("RectangleShape2D_3kn46")

[connection signal="area_entered" from="Node2D/Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Node2D/Area2D" to="." method="_on_area_2d_body_entered"]
